feat: 백오피스 admin API + DB role 기반 인증
- /api/admin/{members,players,teams} 페이징 조회 + /api/admin/cron-jobs 카탈로그
- /api/admin/**, /api/debug/** 를 ROLE_ADMIN 으로 보호 (기존 permitAll 구멍 차단)
- member.role 컬럼(V48) + JWT role claim 으로 권한 관리 (요청마다 DB조회 X)
- 백오피스 OAuth: target=backoffice 콜백 분기, 기존 ADMIN 회원만 허용(회원 생성 안 함)
- CORS 에 백오피스 오리진(localhost:5173) 추가
- 테스트: JWT 필터 권한 분기, findAdminMember(admin/비admin/미등록)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>